got rid of return function

--- a/canvas.html
+++ b/canvas.html
@@ -36,7 +36,7 @@ document.getElementById("greyBtn").addEventListener("click", function grayscale(
         }
     }
     ctx.putImageData(imgPixels, 0, 0, 0, 0, imgPixels.width, imgPixels.height); 
-    return c.toDataURL();
+    // return c.toDataURL();
 });
 
 function handleImage(e){ 
